<resources>
    <string name="app_name">Anacostia Park App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tour">Audio Tour</string>
    <string name="title_activity_map">Map</string>
    <string name="defaultProgress">0:00</string>
    <string name="title_activity_settings">Settings</string>
    <string name="audio_zones_visible">Zones are shown on map</string>
    <string name="audio_zones_not_visible">Zones are hidden on map</string>
    <string name="title_activity_about">About</string>
    <string name="aws_purpose">
        The Anacostia Watershed Society was founded in 1989
        by a small group of concerned individuals who decided
        that the environmental needs of the Anacostia River
        and its watershed communities required serious attention.
        Over the past 20 years, our staff and programming efforts
        have expanded significantly to encompass efforts
        in environmental education, stewardship, and recreation,
        as well as engaging the community through public affairs.
        We are making a difference and we hope you\'ll help!</string>
    <string name="aws_mission">
        The mission of the Anacostia Watershed Society
        is to protectand restore the Anacostia River
        and its watershed communities by cleaning the water,
        recovering the shores, and honoring the heritage.
    </string>
    <string name="aws_vision">
        The vision is to make the Anacostia River and its
        tributaries swimmable and fishable, in keeping
        with the Clean Water Act, for the health
        and enjoyment of everyone in the community. Community
        involvement is critical to achieving this vision
        and AWS seeks win-win solutions through strong
        partnerships and coalitions, with all parts
        of the community, government, and other stakeholders.
        Core to our work is reaching out to, educating
        and engaging the next generation of decision-makers, our youth.
    </string>
    <string name="aws_title">Anacostia Watershed Society</string>
    <string name="aws_subtitle">Mission and Purpose Statements</string>
    <string name="creator_subtitle">App created by David Zhao and Lee Cain</string>
    <string name="creator_contact">To contact us, email at 2016dzhao@tjhsst.edu</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_event_information">Event Information</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_image">Image</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
